<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clipToPadding="false"
    android:paddingHorizontal="16dp"
    android:paddingVertical="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/tv_story_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/dummy_name" />

            <ImageView
                android:id="@+id/iv_story_image"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="8dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_story_username"
                tools:src="@drawable/robotics" />

            <LinearLayout
                android:id="@+id/posted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/iv_story_image"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.6"
                    android:textSize="12sp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/posted_at" />
                <TextView
                    android:id="@+id/tv_story_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.6"
                    android:textSize="12sp"
                    tools:text="@string/dummy_date" />
            </LinearLayout>

            <TextView
                android:id="@+id/tv_story_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:textSize="16sp"
                android:layout_marginTop="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:ellipsize="end"
                android:maxLines="2"
                app:layout_constraintTop_toBottomOf="@id/posted"
                tools:text="@string/dummy_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>