<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailStoryActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/dark_blue_700"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp">

            <LinearLayout
                android:id="@+id/posted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"

                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.6"
                    android:textSize="14sp"
                    android:layout_marginEnd="4dp"
                    android:text="@string/posted_at" />
                <TextView
                    android:id="@+id/tv_story_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.6"
                    android:textSize="14sp"
                    tools:text="@string/dummy_date" />
            </LinearLayout>


            <ImageView
                android:id="@+id/iv_story_image"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:contentDescription="@string/story_illustration"
                android:scaleType="matrix"
                android:transitionName="story_image"
                android:layout_marginEnd="12dp"
                android:layout_marginStart="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/posted"
                tools:src="@drawable/robotics" />

            <TextView
                android:id="@+id/tv_story_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:transitionName="description"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/posted"
                app:layout_constraintStart_toStartOf="@+id/posted"
                app:layout_constraintTop_toBottomOf="@+id/iv_story_image"
                tools:text="@string/dummy_description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>